--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
 		</header>
 			<div class="container">
 				<form>
-					<input type="text" id="city-type" placeholder="Enter a city name...">
-					<input type="submit" value="Update" id="submit-btn">
+					<select id="city-options"></select>
+					<!--input type="text" id="city-type" placeholder="Enter a city name...">
+					<input type="submit" value="Update" id="submit-btn"-->
 				</form>
 			</div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>	
+		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>	
 		<script src="js/index.js"></script>
+	
 	</body>
 </html>
